--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>I can code a lot of things</h1>
     <p>This is a small subset of things i can do </p>
+    <img src="ka.jpg" alt="">
+    <img src="50-Kakashi-Quotes-From-The-Popular-Manga-Character.jpg" alt="">
 </body>
 </html>
